# editorium

./: .gitignore  .gitmodules  LICENSE  TODO.txt  editorium-cli  pyproject.toml
docs/: README.md
editorium/: __init__.py  cmd_cog_video.py  cmd_desktop.py  cmd_ffmpeg.py  cmd_pyramid_flow.py  cmd_server.py  cmd_utils.py  cmd_workflow.py  docker_management.py  help_formater.py  request_wrapper.py
editorium/app/: .dockerignore  editorium.Dockerfile  nvidia.Dockerfile  requirements-experimental.txt  requirements.txt  requirements1.txt  requirements2.txt  requirements3.txt  run-server.sh
editorium/app/server/: main.py
editorium/app/server/pipelines/chatbot/: managed_model.py  task_processor.py
editorium/app/server/pipelines/chatstory/: managed_model.py  task_processor.py
editorium/app/server/pipelines/chatvision/: managed_model.py  task_processor.py
editorium/app/server/pipelines/cogvideo/: cogvideox_lora_trainer.py  cogvideox_transformer.py  (+8 more)
editorium/app/server/services/: http_server.py  queue_server.py  websocket_server.py
editorium/app/server/task_helpers/: progress_bar.py
editorium/app/server/workflow/: task_processor.py
editorium/common/: path_utils.py
examples/: workflow.txt
gui-app/: CMakeLists.txt  build-debug.sh  dbg-run.sh
gui-app/src/: main.cpp  main_window.cpp  main_window.h  websocket_demo.cpp
gui-app/src/base64/: b64.h  base64.cpp  base64.h  buffer.cpp  decoder.cpp  encoder.cpp
gui-app/src/components/: button.cpp  button.h  image_panel.cpp  image_panel.h  main_menu.cpp  main_menu.h
gui-app/src/components/xpm/: xpm.cpp  xpm.h
gui-app/src/components/xpm/data/24x24/: left-right.xpm  up-down.xpm
gui-app/src/images/: bookmarked_images.cpp  bookmarked_images.h  image.cpp  image.h  image_palette.cpp  image_palette.h
gui-app/src/messagebus/: messagebus.cpp  messagebus.h
gui-app/src/misc/: config.cpp  config.h  dialogs.cpp  dialogs.h  profiles.cpp  profiles.h  utils.cpp  utils.h  workflow_parser.cpp  workflow_parser.h
gui-app/src/video/: decoder.cpp  decoder.h  encoder.cpp  encoder.h  guards.cpp  guards.h  headers.h  stream.cpp  stream.h  video.cpp  video.h
gui-app/src/websocket/: api.h  code.cpp  code.h  tasks.cpp  tasks.h
gui-app/src/websocket/tasks/: chatbots.cpp  chatbots.h  diffusion.cpp  diffusion.h  filesystem.cpp  filesystem.h  models.cpp  models.h  upscalers.cpp  upscalers.h  videogen.cpp  videogen.h
gui-app/src/windows/: chatbot_ui.cpp  chatbot_ui.h  copy_region_ui.cpp  copy_region_ui.h  diffusion_ui.cpp  diffusion_ui.h  drawing_ui.cpp  drawing_ui.h  image_palette_ui.cpp  image_palette_ui.h  ltx_video_ui.cpp  ltx_video_ui.h  progress_ui.cpp  progress_ui.h  sapiens_ui.cpp  sapiens_ui.h  settings_ui.cpp  settings_ui.h  size_ui.cpp  size_ui.h  upscaler_ui.cpp  upscaler_ui.h
gui-app/src/windows/frames/: colorpalette_frame.cpp  colorpalette_frame.h  controlnet_frame.cpp  controlnet_frame.h  embeddings_frame.cpp  embeddings_frame.h  image_frame.cpp  image_frame.h  prompt_frame.cpp  prompt_frame.h  results_frame.cpp  results_frame.h
tests/: run-tests.sh
tests/tests_files/: main.py
(+158 files in other folders)
